refactor: Update nested types to be public static for cross-package accessibility
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>